# garbled-circuit-viz

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  problemstatement.md  start.ps1
.claude/: settings.local.json
.claude/memory/: MEMORY.md
.github/workflows/: deploy.yml
memory/: MEMORY.md
src/: circuit.rs  evaluate.rs  garble.rs  lib.rs  ot.rs
tasks/: ot-two-party.md
www/: index.html  main.js  style.css
