[package]
name = "gc-viz"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
aes = "0.8"
cipher = "0.4"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
curve25519-dalek = { version = "4", default-features = false, features = ["alloc"] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]
